# btag-training-preprocessing

./: CMakeLists.txt  setup.sh
BTagTrainingPreprocessing/: CMakeLists.txt
BTagTrainingPreprocessing/src/: BTagJetWriter.cxx  BTagJetWriter.hh  BTagTrackWriter.cxx  BTagTrackWriter.hh
